# breath

./: .gitignore  Cargo.toml  README.md  breath.yml  breathes.toml
.github/workflows/: breath.yml
completions/: bash_completions.bash  fish_completion.fish  zsh_completion.zsh
docs/: crates.js  fn.breathes.html  fn.main.html  index.html  settings.html  src-files.js
docs/breath/: all.html  fn.breathes.html  fn.main.html  index.html  sidebar-items.js
docs/breath/commit/: enum.Role.html  fn.add.html  fn.diff.html  fn.run_commit.html  fn.status.html  fn.vcs.html  index.html  sidebar-items.js  struct.Commit.html  struct.CommitType.html  struct.Config.html
docs/breath/config/: fn.init_config.html  fn.load_config.html  index.html  sidebar-items.js  struct.BreathConfig.html  struct.Config.html  struct.Documentation.html  struct.Me.html
docs/breath/doc/: fn.describe.html  fn.generate_doc.html  fn.generate_man.html  fn.is_safe_command.html  index.html  sidebar-items.js
docs/breath/tree/: fn.get_tree.html
docs/breath/utils/: constant.KO.html  constant.OK.html  constant.QUIT.html  enum.ZenOption.html  fn.call.html  fn.ok.html  fn.zen.html  (+3 more)
docs/commit/: index.html
docs/config/: fn.load_config.html  index.html  struct.Documentation.html
docs/doc/: help.html  index.html  src-files.js
docs/search.index/: 039fe73d2c77.js  053573fd3ee1.js  054ef72eda07.js  13dbe252f0bb.js  14cf398c21ee.js  1a11c6fe74e8.js  259010342587.js  29d9dab7e702.js  2d5accc758dd.js  337ed2ecc25c.js  38d88c526463.js  3f093a4c9ce4.js  3f75de7dfedb.js  420161208f58.js  4979c817d19e.js  4dd8e98fff52.js  4ec1a42af6df.js  50824a7bfe7d.js  55d8317e373a.js  59051ec46503.js  5ea842cfddfb.js  62b47c67367e.js  667b216d1182.js  69eadcfef041.js  75115639cb5b.js  7683ccf22183.js  76c9738b9b67.js  7abf87efd7d5.js  7bd7cc63b329.js  7cdcd26a3acd.js  root.js
docs/tree/: index.html
docs/utils/: constant.KO.html  fn.types.html  index.html  sidebar-items.js
src/: api.rs  commit.rs  config.rs  doc.rs  git.rs  hg.rs  hooks.rs  issues.rs  main.rs  tree.rs  utils.rs
src/api/: github.rs  mod.rs
templates/: default.txt
(+89 files in other folders)
