[package]
name = "breath"
version = "0.3.0"
edition = "2024"
authors = ["hackia"]
license = "AGPL-3.0"
description = "a tools for commiting rust with git or hg source code"
categories = ["development-tools"]
repository = "https://github.com/hackia/breath"
keywords = ["git", "hg", "rust", "Nodejs", "commit"]
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
toml = "0.9.8"
inquire = { version = "0.9.1", features = ["console", "editor"] }
spinners = "4.1.1"
clap = "4.5.48"
tabled = "0.20.0"
regex = "1.12.2"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["github"]
github = []
gitlab = []
