[package]
name = "breath"
version = "0.3.2"
edition = "2024"
authors = ["hackia"]
license = "AGPL-3.0"
description = "a tools for commiting rust with git or hg source code"
categories = ["development-tools"]
repository = "https://github.com/hackia/breath"
keywords = ["hooks", "macos", "linux", "windows", "commit"]
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
inquire = { version = "0.9.1", features = ["console", "editor"] }
spinners = "4.1.1"
clap = "4.5.48"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
breathes = "0.1.0"
serde_yaml = "0.9.34+deprecated"
ignore = "0.4.25"
